--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -6,12 +6,10 @@
 <div th:include="fragments/navbar :: navHome"></div>
 
 <main class="success">
-
     <div class="background-image"></div>
-
     <div class="card-panel container white-text">
         <div class="container">
-            <table>
+            <table class="responsive-table">
                 <tr>
                     <td>Username: </td>
                     <td>[[${user.username}]]</td>
@@ -24,51 +22,47 @@
                     <td>Phone Number: </td>
                     <td>[[${user.phoneNumber}]]</td>
                 </tr>
+                <div th:if="${companyProfile} != null">
+                    <tr>
+                        <td>Company Name: </td>
+                        <td>[[${companyProfile.companyName}]]</td>
+                    </tr>
+                    <tr>
+                        <td>Name:</td>
+                        <td>[[${companyProfile.companyContactFirstName}]] [[${companyProfile.companyContactLastName}]]</td>
+                    </tr>
+                    <tr>
+                        <td>Location</td>
+                        <td>[[${companyProfile.companyLocation}]]</td>
+                    </tr>
+                </div>
+                <div  th:if="${musicianProfile} != null">
+                    <tr>
+                        <td>Name: </td>
+                        <td>[[${musicianProfile.firstName}]] [[${musicianProfile.lastName}]]</td>
+                    </tr>
+                    <tr>
+                        <td>Location: </td>
+                        <td>[[${musicianProfile.location}]]</td>
+                    </tr>
+                    <tr>
+                        <td>Instruments:</td>
+                        <td>[[${musicianProfile.musicianInstruments}]]</td>
+                    </tr>
+                    <tr>
+                        <td>Bio:</td>
+                        <td>[[${musicianProfile.bio}]]</td>
+                    </tr>
+                </div>
+
             </table>
-            <table th:if="${companyProfile} != null">
-                <tr>
-                    <td>Company Name: </td>
-                    <td>[[${companyProfile.companyName}]]</td>
-                </tr>
-                <tr>
-                    <td>Name:</td>
-                    <td>[[${companyProfile.companyContactFirstName}]] [[${companyProfile.companyContactLastName}]]</td>
-                </tr>
-                <tr>
-                    <td>Location</td>
-                    <td>[[${companyProfile.companyLocation}]]</td>
-                </tr>
-            </table>
-            <table th:if="${musicianProfile} != null">
-                <tr>
-                    <td>Name: </td>
-                    <td>[[${musicianProfile.firstName}]] [[${musicianProfile.lastName}]]</td>
-                </tr>
-                <tr>
-                    <td>Location: </td>
-                    <td>[[${musicianProfile.location}]]</td>
-                </tr>
-                <tr>
-                    <td>Instruments:</td>
-                    <td>[[${musicianProfile.musicianInstruments}]]</td>
-                </tr>
-                <tr>
-                    <td>Bio:</td>
-                    <td>[[${musicianProfile.bio}]]</td>
-                </tr>
-            </table>
+
         </div>
-
-
-
         <div class="center-align">
             <h3>[[${message}]]</h3>
                 <a href="/login" class="waves-effect waves-light btn">Go to Login</a>
         </div>
     </div>
-
-
-
 </main>
 <div th:include="fragments/footer :: footer"></div>
 
