--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -99,7 +99,8 @@
                         </li>
                     </div>
 
-                    <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger logBtn" href="#signupModal" style="margin-right: 0px;">Login</a></li>
+                    <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger" href="#signupModal" style="margin-right: 0px;">Login</a></li>
+
                 </ul>
 
             </div>
