--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -9,7 +9,7 @@
     <div class="background-image"></div>
     <div class="card-panel container white-text">
         <div class="container">
-            <table class="responsive-table">
+            <table class="bordered">
                 <tr>
                     <td>Username: </td>
                     <td>[[${user.username}]]</td>
