--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,21 +6,29 @@
 
     <main>
         <section class=" top">
-            <div th:include="fragments/navbar :: navHome"></div>
             <div class="hide-on-med-and-down">
                 <div class="section scrollspy" id="top">
 
-                    <div class=" container">
+                    <div class=" logo-action">
                         <h1 class="brand-logo white-text" id="logo">gigFinder</h1>
-                        <a href="#bottom" class="center-align"><i class="material-icons white-text downArrow">arrow_downward</i></a>
+                        <div class="row">
+                            <div class="col s6 right-align">
+                                <a  class="modal-trigger logBtn" href="#signupModal" style="margin-right: 0px;">Login</a>
+
+                            </div>
+                            <div class="col s6 left-align">
+                                <a  class="logBtn" href="#bottom" style="margin-right: 0px;">Sign Up</a>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
             </div>
             <div class="show-on-med-and-down hide-on-large-only">
-                <section class="container">
-                    <div class="card-panel center-align login-card">
-                        <h5 class="center-align white-text">Login</h5>
+                <section class="tab-top">
+
+                    <div class="card-panel center-align ">
+                        <h1 class="login-logo center-align"> gigFinder</h1>
 
                         <div th:text="${message}"></div>
                         <div style="color: red; margin: 15px 0px;" th:text="${error}"></div>
@@ -38,8 +46,15 @@
                                 <input id="password" type="password" th:field="*{password}" />
                                 <label for="password">Password</label>
                             </div>
-                            <button class="waves-effect waves-light btn" type="submit" >Login</button>
+
+                                    <button class="waves-effect waves-light btn" type="submit" >Login</button>
+
+
+
+
                         </form>
+                    <a  class="waves-effect waves-light btn" href="#bottom" style="margin-right: 0px;">Sign Up</a>
+
                     </div>
                 </section>
 
@@ -50,10 +65,10 @@
                 <div class="col s12 l6" id="musicChoice">
                     <section class="center-align">
                         <div class="musicText white-text">
-                            <h3>I'm a Musician</h3>
-                            <h5>I'm looking for gigs</h5>
-                            <h5>I want to network with other musicians</h5>
-                            <h5>I need to get my name out there</h5>
+                            <h2>I'm a Musician</h2>
+                            <p>I'm looking for gigs</p>
+                            <p>I want to network with other musicians</p>
+                            <p>I need to get my name out there</p>
                             <a href="/signup/musician/" class="logBtn">Sign Up</a>
                         </div>
                     </section>
@@ -61,15 +76,13 @@
                 <div id="compChoice" class="col s12 l6">
                     <section class="center-align">
                         <div class="compText white-text">
-                            <h3>I Book Musicians</h3>
-                            <h5>I need help booking musicians</h5>
-                            <h5>I need help finding new talent</h5>
-                            <h5>I need to advertise gigs for my venue</h5>
+                            <h2>I Book Musicians</h2>
+                            <p>I need help booking musicians</p>
+                            <p>I need help finding new talent</p>
+                            <p>I need to advertise gigs for my venue</p>
 
-                            <div class="compAction">
-                                <a href="/signup/company/" class="logBtn">Sign Up</a>
+                            <a href="/signup/company/" class="logBtn">Sign Up</a>
 
-                            </div>
                         </div>
                     </section>
                 </div>
