fixed cover banner bug

--- a/src/main/resources/templates/Create/createCompany.html
+++ b/src/main/resources/templates/Create/createCompany.html
@@ -23,21 +23,20 @@
 
 
                             <div th:object="${user}">
-                                <span class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</span>
-                                <span class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</span>
-                                <span class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</span>
-                                <span class="error" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Phone Number Error</span>
-
+                                <div class="error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
+                                <div class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</div>
+                                <div class="error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
+                                <div class="error" th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}">Phone Number Error</div>
                                 <div class="row">
                                     <div class="input-field col s12 m6">
                                         <label for="username">Username</label>
-                                        <input id="username" type="text" th:field="*{username}"/>
+                                        <input id="username" type="text" th:field="*{username}" class="validate"/>
 
                                     </div>
 
                                     <div class="input-field col s12 m6">
                                         <label for="password">Password</label>
-                                        <input id="password" type="password" th:field="*{password}"/>
+                                        <input id="password" type="password" th:field="*{password}" class="validate"/>
 
                                     </div>
 
@@ -45,27 +44,27 @@
                                 <div class="row">
                                     <div class="input-field col s12 m6">
                                         <label for="email"> Email</label>
-                                        <input id="email" type="email" th:field="*{email}"/>
+                                        <input id="email" type="email" th:field="*{email}" class="validate"/>
 
                                     </div>
                                     <div class="input-field col s12 m6">
                                         <label for="pNumber">Phone Number</label>
-                                        <input id="pNumber" type="text" th:field="*{phoneNumber}"/>
+                                        <input id="pNumber" type="text" th:field="*{phoneNumber}" class="validate"/>
 
                                     </div>
                                 </div>
                             </div>
                             <div th:object="${companyProfile}">
-                                <span class="error" th:if="${#fields.hasErrors('companyName')}" th:errors="*{companyName}">Company Name Error</span>
-                                <span class="error" th:if="${#fields.hasErrors('companyContactFirstName')}" th:errors="*{companyContactFirstName}">First Name Error</span>
-                                <span class="error" th:if="${#fields.hasErrors('companyContactLastName')}" th:errors="*{companyContactLastName}">Last Name Error</span>
-                                <span class="error" th:if="${#fields.hasErrors('companyCity')}" th:errors="*{companyCity}">City Error</span>
-                                <span class="error" th:if="${#fields.hasErrors('companyState')}" th:errors="*{companyState}">State Error</span>
+                                <div class="error" th:if="${#fields.hasErrors('companyName')}" th:errors="*{companyName}">Company Name Error</div>
+                                <div class="error" th:if="${#fields.hasErrors('companyContactFirstName')}" th:errors="*{companyContactFirstName}">First Name Error</div>
+                                <div class="error" th:if="${#fields.hasErrors('companyContactLastName')}" th:errors="*{companyContactLastName}">Last Name Error</div>
+                                <div class="error" th:if="${#fields.hasErrors('companyCity')}" th:errors="*{companyCity}">City Error</div>
+                                <div class="error" th:if="${#fields.hasErrors('companyState')}" th:errors="*{companyState}">State Error</div>
 
                                 <div class="row">
                                     <div class="input-field col s12">
                                         <label for="name">Company Name</label>
-                                        <input id="name" type="text" th:field="*{companyName}"/>
+                                        <input id="name" type="text" th:field="*{companyName}" class="validate"/>
 
                                     </div>
 
@@ -73,12 +72,12 @@
                                 <div class="row">
                                     <div class="input-field col s12 m6">
                                         <label for="firstName">Contact First Name</label>
-                                        <input id="firstName" type="text" th:field="*{companyContactFirstName}"/>
+                                        <input id="firstName" type="text" th:field="*{companyContactFirstName}" class="validate"/>
 
                                     </div>
                                     <div class="input-field col s12 m6">
                                         <label for="lastName">Contact Last Name</label>
-                                        <input id="lastName" type="text" th:field="*{companyContactLastName}"/>
+                                        <input id="lastName" type="text" th:field="*{companyContactLastName}" class="validate"/>
 
                                     </div>
                                 </div>
@@ -89,7 +88,7 @@
 
                                     </div>
                                     <div class="input-field col s6 m6">
-                                        <select th:field="*{companyState}" id="state" class="validate">
+                                        <select th:field="*{companyState}" id="state">
                                             <option value="" disabled="disabled" selected="selected">State</option>
                                             <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
                                         </select>
