--- a/src/main/resources/templates/Create/createGig.html
+++ b/src/main/resources/templates/Create/createGig.html
@@ -19,42 +19,42 @@
                 </div>
                 <div class="col s12 m6 white compForm">
                         <form th:action="@{/company/create-gig/}" method="post" th:object="${gig}" enctype="multipart/form-data">
-                            <span class="error" th:if="${#fields.hasErrors('gigTitle')}" th:errors="*{gigTitle}">Title Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigDescription')}" th:errors="*{gigDescription}">Description Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigStreet')}" th:errors="*{gigStreet}">Street Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigCity')}" th:errors="*{gigCity}">City Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigState')}" th:errors="*{gigState}">State Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigZip')}" th:errors="*{gigZip}">Zip Code Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigType')}" th:errors="*{gigType}">Gig Type Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigStart')}" th:errors="*{gigStart}">Gig Start Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('timeStart')}" th:errors="*{timeStart}">Time Start Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('gigEnd')}" th:errors="*{gigEnd}">Gig End Error</span>
-                            <span class="error" th:if="${#fields.hasErrors('timeEnd')}" th:errors="*{timeEnd}">Time End Error</span>
+                            <div class="error" th:if="${#fields.hasErrors('gigTitle')}" th:errors="*{gigTitle}">Title Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigDescription')}" th:errors="*{gigDescription}">Description Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigStreet')}" th:errors="*{gigStreet}">Street Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigCity')}" th:errors="*{gigCity}">City Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigState')}" th:errors="*{gigState}">State Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigZip')}" th:errors="*{gigZip}">Zip Code Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigType')}" th:errors="*{gigType}">Gig Type Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigStart')}" th:errors="*{gigStart}">Gig Start Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('timeStart')}" th:errors="*{timeStart}">Time Start Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('gigEnd')}" th:errors="*{gigEnd}">Gig End Error</div>
+                            <div class="error" th:if="${#fields.hasErrors('timeEnd')}" th:errors="*{timeEnd}">Time End Error</div>
 
                             <div class="row">
                                 <div class="input-field col s12">
                                     <label for="title">Title</label>
-                                    <input id="title" type="text" th:field="*{gigTitle}" data-length="40"/>
+                                    <input id="title" type="text" th:field="*{gigTitle}" data-length="40" class="validate"/>
 
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <label for="description">Description</label>
-                                    <input id="description" type="text" th:field="*{gigDescription}" data-length="140"/>
+                                    <input id="description" type="text" th:field="*{gigDescription}" data-length="140" class="validate"/>
 
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <label for="location">Street</label>
-                                    <input id="location" type="text" th:field="*{gigStreet}" class="autocomplete"/>
+                                    <input id="location" type="text" th:field="*{gigStreet}" class="autocomplete" class="validate"/>
 
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s6">
-                                    <input id="city" type="text" th:field="*{gigCity}"/>
+                                    <input id="city" type="text" th:field="*{gigCity}" class="validate"/>
                                     <label for="city">City</label>
 
                                 </div>
@@ -67,7 +67,7 @@
                                 </div>
 
                                 <div class="input-field col s3">
-                                    <input id="zip" type="text" th:field="*{gigZip}" maxlength="5" minlength="5"/>
+                                    <input id="zip" type="text" th:field="*{gigZip}" maxlength="5" minlength="5" class="validate"/>
                                     <label for="zip">Zip Code</label>
                                 </div>
 
@@ -84,11 +84,11 @@
                             <div class="row">
                                 <div class="input-field col s6">
                                     <label for="start">Start</label>
-                                    <input id="start" type="date" class="datepicker" th:field="*{gigStart}"/>
+                                    <input id="start" type="date" class="datepicker" th:field="*{gigStart}" class="validate"/>
 
                                 </div>
                                 <div class="input-field col s6">
-                                    <input id="timeStart" type="text" class="timepicker" th:field="*{timeStart}"/>
+                                    <input id="timeStart" type="text" class="timepicker" th:field="*{timeStart}" class="validate"/>
                                     <label for="timeStart">Start Time</label>
 
                                 </div>
@@ -96,11 +96,11 @@
                             <div class="row">
                                 <div class="input-field col s6">
                                     <label for="end">End</label>
-                                    <input id="end" type="date" class="datepicker" th:field="*{gigEnd}"/>
+                                    <input id="end" type="date" class="datepicker" th:field="*{gigEnd}" class="validate"/>
 
                                 </div>
                                 <div class="input-field col s6">
-                                    <input id="timeEnd" type="text" class="timepicker" th:field="*{timeEnd}"/>
+                                    <input id="timeEnd" type="text" class="timepicker" th:field="*{timeEnd}" class="validate"/>
                                     <label for="timeEnd">End Time</label>
 
                                 </div>
@@ -112,7 +112,7 @@
                                         <input type="file" name="gigImage"/>
                                     </div>
                                     <div class="file-path-wrapper">
-                                        <input class="file-path validate" type="text" placeholder="Upload Gig Image"/>
+                                        <input class="file-path validate" type="text" placeholder="Upload Gig Image" class="validate"/>
                                     </div>
                                 </div>
                             </div>
