fixed search button bug

--- a/src/main/resources/templates/companyProfile.html
+++ b/src/main/resources/templates/companyProfile.html
@@ -166,7 +166,7 @@
 
                                     <h4 >Musicians in the Area
                                         <span>
-                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Musicians" href="/company/search/"><i class="material-icons">search</i></a>
+                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Musicians" href="/search"><i class="material-icons">search</i></a>
                 </span>
                                     </h4>
                                     <div th:if="${musician.isEmpty()}">
@@ -319,7 +319,7 @@
 
                             <h4 >Musicians in the Area
                                 <span>
-                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Musicians" href="/company/search/"><i class="material-icons">search</i></a>
+                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Musicians" href="/search"><i class="material-icons">search</i></a>
                 </span>
                             </h4>
                             <div th:if="${musician.isEmpty()}">
