--- a/src/main/resources/templates/musicianProfile.html
+++ b/src/main/resources/templates/musicianProfile.html
@@ -160,7 +160,7 @@
 
                                     <h4 >Gigs in the Area
                                         <span>
-                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Gigs" href="/musician/search/"><i class="material-icons">search</i></a>
+                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Gigs" href="/search"><i class="material-icons">search</i></a>
                 </span>
                                     </h4>
                                     <div th:if="${musicianProfile.getLocation() != gig}">
@@ -332,7 +332,7 @@
                 <div id="tab-areaGigs" class="col s12">
                     <h4 class="center-align card-panel">Gigs in the Area
                         <span>
-                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Gigs" href="/musician/search/"><i class="material-icons">search</i></a>
+                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Gigs" href="/search"><i class="material-icons">search</i></a>
                 </span>
                     </h4>
                     <div th:if="${gig.isEmpty()}">
